k8s/serviceMesh1.yaml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-mesh1
  labels:
    app: service-mesh1
    service: service-mesh1
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: service-mesh1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-mesh1-v1
  labels:
    app: service-mesh1
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-mesh1
        version: v1
    spec:
      containers:
        - name: service-mesh1
          image: 172.26.225.101:5000/com.demo-service-mesh1:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
