k8s/Jaeger.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 15032
        name: http-tracing
        protocol: HTTP
      hosts:
        - "tracing.istio.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
    - "tracing.istio.io"
  gateways:
    - tracing-gateway
  http:
    - match:
        - port: 15032
      route:
        - destination:
            host: tracing
            port:
              number: 80
---
