k8s/ingress.yaml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: grafana
#  namespace: istio-system
#spec:
#  rules:
#    - host: grafana.istio.io
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: grafana
#              servicePort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.istio.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vts
  namespace: istio-system
spec:
  hosts:
    - "grafana.istio.io"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
